library/pod-security-policy/users/samples/psp-pods-allowed-user-ranges/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users-disallowed
  labels:
    app: nginx-users
spec:
  securityContext:
    supplementalGroups:
      - 50
    fsGroup: 50
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 50
        runAsGroup: 50
